--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "ws-client.js",
   "scripts": {
+    "start": "node ws-server.js",
+    "debug": "node --debug-brk ws-server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
